<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/Desc"
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="top"
            android:text="@string/Desc"
            android:textAppearance="@style/Desc"
            android:textSize="25dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/bg">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Add"
                android:layout_width="288dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/white_rectangle"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/Add"
                android:textAppearance="@style/Add"/>

            <Button
                android:id="@+id/add_btn"
                android:layout_width="132dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/black_rectangle"
                android:elevation="3dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/addBtn"
                android:textAppearance="@style/addBtn"
                app:backgroundTint="#334257" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>